--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,58 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
-ENV/
+# OSX
+.DS_Store
+
+# Xcode
 build/
-develop-eggs/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+
+# Android/IntelliJ
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
+
+# node.js
+node_modules/
+npm-debug.log
+yarn-error.log
+
+# Expo
+.expo/
+.expo-shared/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
+web-build/
 
-# Virtual environments
-venv/
-ENV/
-env/
+# Environment variables
+.env
+.env.local
+.env.production
 
-# IDE
-.vscode/
-.idea/
+# Logs
+*.log
+
+# Misc
 *.swp
 *.swo
 *~
-
-# OS
-.DS_Store
-Thumbs.db
-Desktop.ini
-
-# Project specific
-*.xlsx
-*.xls
-*.log
-*.tmp
-.chrome/
-.chromedriver
-
-# Selenium
-geckodriver.log
-chromedriver.log
-
-# API keys and secrets
-.env
-*.key
-*.pem
+.cache
 
